# zephyr-osek

drivers/display/: display_stm32_ltdc.c
include/zephyr/portability/: osek_os.h
subsys/portability/: CMakeLists.txt  Kconfig
subsys/portability/osek_os/: CMakeLists.txt  Kconfig  alarm.c  event.c  internal.c  interrupt.c  os.c  resource.c  task.c  type.h  wrapper.h
